Fix spacing on donor homepage

--- a/client/src/pages/style/DonorHomepage.scss
+++ b/client/src/pages/style/DonorHomepage.scss
@@ -9,6 +9,7 @@
 
     &-request-groups-browser {
         margin: 79px 55px 0;
+        margin-bottom: 50px;
     }
 
     &-donor-impact-section {
